menambahkan diary tentang materi

--- a/diary.html
+++ b/diary.html
@@ -4,4 +4,6 @@ Digilife, Bandung
 
 jam 09.00 s/d 15.00 WIB.
 
-Hari pertama coding mum excited sekali.  Walau  katanya Mas Yudi materinya masih membosankan karena settingnya buanyaak sekali.
+Hari pertama coding mum excited sekali.  Walau  katanya Mas Yudi materinya masih membosankan karena settingnya buanyaak sekali.  Sampai 6 jam tidak terasa seperti 6 jam.  
+
+Materinya install github desktop, github bracket dan syncronize
