up date presentasi

--- a/Presentasi/index.html
+++ b/Presentasi/index.html
@@ -81,8 +81,36 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Our Website</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+<!--                <div class="intro-heading">It's Nice To Meet You</div>-->
+<!--                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>-->
+                 <div class="col-md-6 col-md-12 tracking">
+<!--                 <h3><strong> Tracking</strong></h3>-->
+                 <form class="trace validate drop-captcha" id="traceForm" action="http://www.jne.co.id/id/tracking/trace" method="post" name="form-trace" novalidate="novalidate">
+
+    <input type="hidden" name="_token" value="zyWIA0N3MGPV8RaLGkUepjjQJHZwvh9Khb2vKnue">
+
+      <h3><strong></strong><b>LACAK KIRIMAN</b></h3>
+      <div class="row" style="position:relative;">
+          <textarea name="code" class="required" aria-required="true"></textarea>
+            <div class="home-captcha" style="background-color:#e11b22;">
+<!--              <div id="reCAPTCHA-1">                <input type="hidden" name="recaptcha_challenge_field" value="03AHJ_VuvD6Newye5hRXw68m5OCZk4STHu6Rl5Bv9r58RkuTaU2ia4nZxpWnT3sypwfBrmyLwLELwAp2EHWa41xPZU2CbYhqC71UAsmdUWyLflLLqqSMLrR0_DYOPQSeYTAXyzpPF852YtRJkbiQ783hkBD8kFxVqi4DgaNoXNf0d9J9cKOtB1t1YwD5ORECntCFoLhPrpl2mqkzubal8Y71tg06-7s3LVww">
+                <br>
+<!--                <img class="recaptcha" height="57" width="300" src="//www.google.com/recaptcha/api/image?c=03AHJ_VuvD6Newye5hRXw68m5OCZk4STHu6Rl5Bv9r58RkuTaU2ia4nZxpWnT3sypwfBrmyLwLELwAp2EHWa41xPZU2CbYhqC71UAsmdUWyLflLLqqSMLrR0_DYOPQSeYTAXyzpPF852YtRJkbiQ783hkBD8kFxVqi4DgaNoXNf0d9J9cKOtB1t1YwD5ORECntCFoLhPrpl2mqkzubal8Y71tg06-7s3LVww"><br>-->
+<!--                <input class="txt_cap" type="text" name="recaptcha_response_field" placeholder="Enter the Words Below" required="" aria-required="true">
+                <br> 
+                <br>  <a href="#" class="reload_captcha">Refresh</a> 
+              </div>--->
+            </div>
+          <button class="btn green" name="tracking" type="submit">tracking</button>
+        <p>Then Click 'TRACKING'  Available up to 20 Airwaybill</p>
+      </div>
+    </form>
+                 <div class="box"></div>
+                 </div>
+                   <div class="col-md-6 col-md-12 tracking">
+                 <h3><strong>Tarif</strong></h3>
+                    </div>
+        
             </div>
         </div>
     </header>
